--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -51,7 +51,7 @@ a {
     width: 100%;
     height: 60%;
     max-width: 1024px;
-    background-image: url(/assets/overlay.png);
+    background-image: url(../assets/overlay.png);
     background-position: center 0;
     background-repeat: no-repeat
 }
