--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,156 +1,100 @@
-/* Author:XrXr
-https://github.com/XrXr/WhenIsKateLive
-License:MIT */
-.center-region {
-    top: 0px;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
-    height: 100%;
-    width: 70%;
-    min-height: 767px;
-    max-width: 1024px;
-    min-width: 450px;
-    margin: 0 auto;
-    background-color: #F1EECC;
-    position: absolute;
-    -webkit-border-radius: 15px;
-    -moz-border-radius: 15px;
-    border-radius: 15px;
-    -webkit-box-shadow: 0px 0px 30px 0px rgba(50, 50, 50, 0.75);
-    -moz-box-shadow: 0px 0px 30px 0px rgba(50, 50, 50, 0.75);
-    box-shadow: 0px 0px 30px 0px rgba(50, 50, 50, 0.75)
-}
-.soft-hide {
-    opacity: 0;
-    height: 0
-}
-h1, h3, th, td, .about-center, .notice-center {
-    text-align: center
-}
-h1 {
-    margin-top: 20px;
-    margin-bottom: 20px
-}
-h3 {
-    margin-bottom: 0px
-}
-table {
-    width: 100%
-}
-a:hover {
-    text-decoration: none
-}
-body {
-    background-color: pink
-}
-a {
-    pointer-events: all
-}
-.overlay-block {
-    width: 100%;
-    height: 60%;
-    max-width: 1024px;
-    background-image: url(../assets/overlay.png);
-    background-position: center 0;
-    background-repeat: no-repeat
-}
-.about-blcok {
-    position: absolute;
-    left: 10px;
-    width: calc(100% - 10px);
-    bottom: 0px
-}
-.about-block-element {
-    pointer-events: none;
-    position: absolute;
-    bottom: 0;
-    width: inherit
-}
-.about-right {
-    text-align: right
-}
-@media (max-width:894px) {
-    .about-blcok {
-        display: none
-    }
-}
-.twitter-username, .twitch-username, .youtube-username {
-    color: #333;
-    font-size: 40px;
-    line-height: 1
-}
-.twitter-username::before {
-    content: "@lovelykaitkim"
-}
-.twitch-username::before {
-    content: "LovelyMomo"
-}
-.youtube-username::before {
-    content: "ProBoxStudio"
-}
-.twitch-block, .youtube-block, .twitter-block {
-    color: inherit;
-    display: inline-block;
-    position: relative;
-    margin-left: 50px;
-    margin-top: 25px;
-    margin-bottom: 25px;
-    float: left
-}
-.prefix {
-    color: #333 !important;
-    cursor: default
-}
-.disguise {
-    text-decoration: none !important
-}
-.disguise:focus {
-    outline: 0
-}
-.disguise:hover {
-    color: inherit;
-    text-decoration: none
-}
-.twitch-logo, .youtube-logo, .twitter-logo {
-    position: relative;
-    width: 45px;
-    height: 45px;
-    float: left
-}
-.twitter-block {
-    top: 0;
-    left: 0;
-    margin-left: 10px;
-    float: left
-}
-.twitter-logo {
-    top: 5px
-}
-.youtube-logo {
-    top: 3px
-}
-.youtube-username {
-    margin-left: 10px
-}
-@media (max-width:1430px) {
-    .twitter-username::before {
-        content: ""
-    }
-    .twitch-username::before {
-        content: ""
-    }
-    .youtube-username::before {
-        content: ""
-    }
-    .twitch-block {
-        position: absolute;
-        left: calc(50% - 22.5px);
-        margin-left: 0;
-        margin-right: 0
-    }
-    .youtube-block {
-        right: 0px;
-        position: absolute
-    }
+/* Author: XrXr
+https: //github.com/XrXr/WhenIsKateLive
+License: MIT */
+
+/*============================================================================*/
+
+* {			box-sizing: inherit; /* Allows nested styles to define thier own */ }
+
+html {		background-color: #ffc1ca;
+			padding: 0 16px;
+			font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+			color: #333;
+			overflow-x: hidden;
+			max-width: 100%;
+			box-sizing: border-box; }
+
+body {		max-width: 1024px;
+			margin: 16px auto;
+			background: #f1eecc;
+			border-radius: 8px;
+			box-shadow: 0px 0px 16px rgba( 50, 50, 50, 0.75 );
+			display: flex;
+			flex-flow: column nowrap;
+			text-align: center; }
+
+/*----------------------------------------------------------------------------*/
+
+h3 {		font-size: 24px;
+			font-weight: 500;
+			padding-top: 16px;
+			margin: 0; }
+
+.hidden {	display: none; }
+
+h1 {		font-size: 36px;
+			font-weight: 500;
+			padding: 0 16px; }
+
+small {		font-size: 12px; }
+
+table {		font-size: 14px;
+			width: 100%; }
+
+a {			color: #428bca;
+			text-decoration: none; }
+
+a:hover {	color: #2a6496; }
+
+.art {		width: 100%;
+			height: auto; }
+
+nav {		display: flex;
+			flex-flow: row wrap;
+			align-items: stretch;
+			justify-content: space-around; }
+
+.site {		display: inline-block;
+			text-decoration: none;
+			font-size: 40px;
+			padding: 16px 0;
+			margin: 0 16px; }
+
+.site
+img {		width: auto;
+			height: 0.8em; /* 4/5 of local text size */
+			vertical-align: middle; }
+
+.site
+.name {		color: #333;
+			padding-left: 8px;
+			vertical-align: middle; }
+
+footer {	padding: 8px 16px;
+			display: flex;
+			flex-flow: row wrap;
+			justify-content: space-between;
+			font-size: 14px; }
+
+/*----------------------------------------------------------------------------*/
+
+@media(max-width:700px) {
+	table {		padding: 0 32px;
+				white-space: nowrap;
+				margin: 0 auto;
+				display: flex;
+				flex-flow: row nowrap;
+				width: auto; }
+	
+	thead {		text-align: left; }
+	
+	tbody {		text-align: right; }
+	
+	tr {		display: flex;
+				flex-flow: column nowrap; }
+	
+	th, td {	padding: 0 8px;  }
+	
+	.site {		font-size: 22px;
+				padding: 8px 0; }
 }
