--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -4,97 +4,139 @@ License: MIT */
 
 /*============================================================================*/
 
-* {			box-sizing: inherit; /* Allows nested styles to define thier own */ }
+* {
+	box-sizing: inherit; /* Allows nested styles to define thier own */
+}
 
-html {		background-color: #ffc1ca;
-			padding: 0 16px;
-			font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-			color: #333;
-			overflow-x: hidden;
-			max-width: 100%;
-			box-sizing: border-box; }
+html {
+	background-color: #ffc1ca;
+	padding: 0 16px;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	color: #333;
+	overflow-x: hidden;
+	max-width: 100%;
+	box-sizing: border-box;
+}
 
-body {		max-width: 1024px;
-			margin: 16px auto;
-			background: #f1eecc;
-			border-radius: 8px;
-			box-shadow: 0px 0px 16px rgba( 50, 50, 50, 0.75 );
-			display: flex;
-			flex-flow: column nowrap;
-			text-align: center; }
+body {
+	max-width: 1024px;
+	margin: 16px auto;
+	background: #f1eecc;
+	border-radius: 8px;
+	box-shadow: 0px 0px 16px rgba( 50, 50, 50, 0.75 );
+	display: flex;
+	flex-flow: column nowrap;
+	text-align: center;
+}
 
 /*----------------------------------------------------------------------------*/
 
-h3 {		font-size: 24px;
-			font-weight: 500;
-			padding-top: 16px;
-			margin: 0; }
+h3 {
+	font-size: 24px;
+	font-weight: 500;
+	padding-top: 16px;
+	margin: 0;
+}
 
-.hidden {	display: none; }
+.hidden {
+	display: none;
+}
 
-h1 {		font-size: 36px;
-			font-weight: 500;
-			padding: 0 16px; }
+h1 {
+	font-size: 36px;
+	font-weight: 500;
+	padding: 0 16px;
+}
 
-small {		font-size: 12px; }
+small {
+	font-size: 12px;
+}
 
-table {		font-size: 14px;
-			width: 100%; }
+table {
+	font-size: 14px;
+	width: 100%;
+}
 
-a {			color: #428bca;
-			text-decoration: none; }
+a {
+	color: #428bca;
+	text-decoration: none;
+}
 
-a:hover {	color: #2a6496; }
+a:hover {
+	color: #2a6496;
+}
 
-.art {		width: 100%;
-			height: auto; }
+.art {
+	width: 100%;
+	height: auto;
+}
 
-nav {		display: flex;
-			flex-flow: row wrap;
-			align-items: stretch;
-			justify-content: space-around; }
+nav {
+	display: flex;
+	flex-flow: row wrap;
+	align-items: stretch;
+	justify-content: space-around;
+}
 
-.site {		display: inline-block;
-			text-decoration: none;
-			font-size: 40px;
-			padding: 16px 0;
-			margin: 0 16px; }
+.site {
+	display: inline-block;
+	text-decoration: none;
+	font-size: 40px;
+	padding: 16px 0;
+	margin: 0 16px;
+}
 
-.site
-img {		width: auto;
-			height: 0.8em; /* 4/5 of local text size */
-			vertical-align: middle; }
+.site img {
+	width: auto;
+	height: 0.8em; /* 4/5 of local text size */
+	vertical-align: middle;
+}
 
-.site
-.name {		color: #333;
-			padding-left: 8px;
-			vertical-align: middle; }
+.site .name {
+	color: #333;
+	padding-left: 8px;
+	vertical-align: middle;
+}
 
-footer {	padding: 8px 16px;
-			display: flex;
-			flex-flow: row wrap;
-			justify-content: space-between;
-			font-size: 14px; }
+footer {
+	padding: 8px 16px;
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-between;
+	font-size: 14px;
+}
 
 /*----------------------------------------------------------------------------*/
 
 @media(max-width:700px) {
-	table {		padding: 0 32px;
-				white-space: nowrap;
-				margin: 0 auto;
-				display: flex;
-				flex-flow: row nowrap;
-				width: auto; }
+	table {
+		padding: 0 32px;
+		white-space: nowrap;
+		margin: 0 auto;
+		display: flex;
+		flex-flow: row nowrap;
+		width: auto;
+	}
 	
-	thead {		text-align: left; }
+	thead {
+		text-align: left;
+	}
 	
-	tbody {		text-align: right; }
+	tbody {
+		text-align: right;
+	}
 	
-	tr {		display: flex;
-				flex-flow: column nowrap; }
+	tr {
+		display: flex;
+		flex-flow: column nowrap;
+	}
 	
-	th, td {	padding: 0 8px;  }
+	th, td {
+		padding: 0 8px;
+	}
 	
-	.site {		font-size: 22px;
-				padding: 8px 0; }
+	.site {
+		font-size: 22px;
+		padding: 8px 0;
+	}
 }
