--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -10,23 +10,25 @@ License: MIT */
 
 html {
     background-color: #ffc1ca;
-    padding: 0 16px;
+    padding: 16px;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #333;
     overflow-x: hidden;
     max-width: 100%;
     box-sizing: border-box;
+    height: 100%;
 }
 
 body {
     max-width: 1024px;
-    margin: 16px auto;
+    margin: 0 auto;
     background: #f1eecc;
     border-radius: 8px;
     box-shadow: 0px 0px 16px rgba( 50, 50, 50, 0.75 );
     display: flex;
     flex-flow: column nowrap;
     text-align: center;
+    min-height: 100%;
 }
 
 /*----------------------------------------------------------------------------*/
@@ -77,8 +79,10 @@ a.disguise {
 
 nav {
     display: flex;
+    flex-grow: 1;
     flex-flow: row wrap;
     align-items: stretch;
+    align-content: flex-start;
     justify-content: space-around;
 }
 
