--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -25,10 +25,14 @@ body {
     background: #f1eecc;
     border-radius: 8px;
     box-shadow: 0px 0px 16px rgba( 50, 50, 50, 0.75 );
-    display: flex;
-    flex-flow: column nowrap;
     text-align: center;
     min-height: 100%;
+    
+    display: -webkit-flex;
+    -webkit-flex-flow: column nowrap;
+    
+    display: flex;
+    flex-flow: column nowrap;
 }
 
 /*----------------------------------------------------------------------------*/
@@ -78,6 +82,13 @@ a.disguise {
 }
 
 nav {
+    display: -webkit-flex;
+    -webkit-flex-grow: 1;
+    -webkit-flex-flow: row wrap;
+    -webkit-align-items: stretch;
+    -webkit-align-content: flex-start;
+    -webkit-justify-content: space-around;
+    
     display: flex;
     flex-grow: 1;
     flex-flow: row wrap;
@@ -108,10 +119,15 @@ nav {
 
 footer {
     padding: 8px 16px;
+    font-size: 14px;
+    
+    display: -webkit-flex;
+    -webkit-flex-flow: row wrap;
+    -webkit-justify-content: space-between;
+    
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
-    font-size: 14px;
 }
 
 /*----------------------------------------------------------------------------*/
@@ -121,9 +137,13 @@ footer {
         padding: 0 32px;
         white-space: nowrap;
         margin: 0 auto;
+        width: auto;
+        
+        display: -webkit-flex;
+        -webkit-flex-flow: row nowrap;
+        
         display: flex;
         flex-flow: row nowrap;
-        width: auto;
     }
     
     thead {
@@ -135,6 +155,9 @@ footer {
     }
     
     tr {
+        display: -webkit-flex;
+        -webkit-flex-flow: column nowrap;
+        
         display: flex;
         flex-flow: column nowrap;
     }
