--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -34,7 +34,8 @@ h3 {
     margin: 0;
 }
 .hidden {
-    display: none;
+    opacity: 0;
+    height: 0;
 }
 h1 {
     font-size: 36px;
@@ -57,6 +58,7 @@ a:hover {
 }
 a.disguise {
     color: inherit;
+    cursor: default;
 }
 .art {
     width: 100%;
@@ -125,10 +127,10 @@ footer span {
         flex-flow: row nowrap;
     }
     thead {
-        text-align: left;
+        float: left;
     }
     tbody {
-        text-align: right;
+        float: right;
     }
     tr {
         display: -webkit-flex;
@@ -137,6 +139,7 @@ footer span {
         flex-flow: column nowrap;
     }
     th, td {
+        display: table;
         padding: 0 8px;
     }
     .site {
