Support canceled streams. Add tests for find_next_stream()
- Canceled streams will have a line that strikes through them

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -132,6 +132,9 @@ footer span {
 .youtube {
     font-size: 35px;
 }
+.canceled {
+    text-decoration: line-through;
+}
 @media(max-width: 350px) {
     html {
         padding: 0;
