Friendlier schedule info. Push to production

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -19,6 +19,9 @@ body {
     height: 100%;
     width: 100%;
 }
+td {
+    max-width: 80px;
+}
 .content-box {
     display: table-cell;
     vertical-align: middle;
